Actual working ping call to all checkouts in Germany